--- a/react-native/android/app/src/main/res/values/strings.xml
+++ b/react-native/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Blank Template</string>
+    <string name="app_name">ReactNative Template</string>
 </resources>
